# src/docs/openapi/api.yaml
@@ -40,7 +40,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OkResponse'
-  '/api/users/{company}':
+  '/api/users/company/{company}':
     get:
       tags:
         - GitHub User Details
@@ -56,7 +56,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OkResponse'
-  '/api/users/{location}':
+  '/api/users/location/{location}':
     get:
       tags:
         - GitHub User Details
@@ -104,7 +104,7 @@ components:
       description: page number
       schema:
         type: integer
-        default: 1
+        default: 0
       required: false
     Size:
       in: query
